base/agentgateway-configuration/http-route.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: anthropic
#   namespace: agentgateway-system
# spec:
#   parentRefs:
#     - group: gateway.networking.k8s.io	
#       kind: Gateway
#       name: agentgateway-proxy
#       namespace: agentgateway-system
#   rules:
#   - backendRefs:
#     - name: anthropic
#       namespace: agentgateway-system
#       group: agentgateway.dev
#       kind: AgentgatewayBackend
#       weight: 1	
#     matches:	
#       - path:	
#           type: PathPrefix	
#           value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openai
  namespace: agentgateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: openai
        namespace: agentgateway-system
        group: agentgateway.dev
        kind: AgentgatewayBackend
        weight: 1
